tests/compile_fail/settings_on_enum.rs
use conflaguration::Settings;

#[derive(Settings)]
enum BadConfig {
    A,
    B,
}

fn main() {}
