tests/compile_fail/settings_on_enum.stderr
error: Settings can only be derived on structs
 --> tests/compile_fail/settings_on_enum.rs:4:6
  |
4 | enum BadConfig {
  |      ^^^^^^^^^
